--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "gatsby-transformer-sharp": "^4.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cloneofsimo/simoryu-blog.git"
   }
 }
